--- a/public/blogs/covid.Rmd
+++ b/public/blogs/covid.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 
-```{r load-libraries, include=FALSE}
+```{r load-libraries, include=FALSE, warning=FALSE, message=FALSE, echo=FALSE}
 library(tidyverse)  # Load ggplot2, dplyr, and all the other tidyverse packages
 library(mosaic)
 library(ggthemes)
